8315098: Improve URLEncodeDecode microbenchmark